Reverted previously fixed scrollbars since it does not work with components requiring inline-block #9552 #9572

--- a/WebContent/VAADIN/themes/base/splitpanel/splitpanel.scss
+++ b/WebContent/VAADIN/themes/base/splitpanel/splitpanel.scss
@@ -31,16 +31,4 @@
 .v-disabled .#{$name}-vsplitter div {
 	cursor: default;
 }
-
-/*
- * In IE8 and IE9 we need to do magic things to avoid scrollbars since it does not completely
- * support the HTML5 doctype. Changing the contained element to a block element will not add
- * magical bottom paddings to the contained element and cause scrollbars. Doing this for all
- * browsers for consistency.
- */
-.v-splitpanel-first-container > .v-widget,
-.v-splitpanel-second-container > .v-widget{
-    display:block;
-}
- 
 }
